Integrated database (except numbers), updated types to use MongoDB GeoJSON, updated config to have db name, added error handling middleware, added fake data generator for MongoDB in Docker
